force-app/main/default/objects/Rule_Assignment_Criteria__c/Rule_Assignment_Criteria__c.object-meta.xml
<CustomObject>
    <label>Rule Assignment Criteria</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Rule Assignment Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Assignment Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>