force-app/main/default/objects/Rule_Assignment_Criteria__c/fields/Additional_Search_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Additional_Search_Criteria__c</fullName>
    <label>Additional Search Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>