force-app/main/default/objects/Rule_Assignment_Criteria__c/fields/Rule_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Rule_Assignment__c</fullName>
    <label>Rule Assignment</label>
    <referenceTo>Rule_Assignment__c</referenceTo>
    <relationshipLabel>Rule Assignment Criterias</relationshipLabel>
    <relationshipName>Rule_Assignment_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>